--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
