--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
