--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "handlebars": "^4.7.7",
