--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.3.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.1",
+    "localtunnel": "^2.0.2",
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
